mybatisplus 分页插件、配置xml编写sql

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,5 @@ spring:
     url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password:
+mybatis-plus:
+  mapper-locations: classpath:mapper/**/*Mapper.xml
