--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,5 +4,10 @@ spring:
     url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password:
+  thymeleaf:
+    suffix: .html
+    prefix: classpath:/templates/
 mybatis-plus:
   mapper-locations: classpath:mapper/**/*Mapper.xml
+
+
