--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <!--thymeleaf-extras 版本需要与thymeleaf版本对应-->
+        <!--Version 3.0.2.RELEASE - for Thymeleaf 3.0 (需要Thymeleaf 3.0.3+)-->
+        <!--Version 2.1.3.RELEASE - for Thymeleaf 2.1 (需要Thymeleaf 2.1.2+) -->
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+            <version>2.1.3.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
